Issue show : bullet points not aligned if sub-task is in a different project (#21037).
git-svn-id: http://svn.redmine.org/redmine/trunk@15374 e93f8b46-1217-0410-a6f0-8f06a7374b81

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -178,16 +178,16 @@ tr.issue td.relations span {white-space: nowrap;}
 table.issues td.description {color:#777; font-size:90%; padding:4px 4px 4px 24px; text-align:left; white-space:normal;}
 table.issues td.description pre {white-space:normal;}
 
-tr.issue.idnt td.subject a {background: url(../images/bullet_arrow_right.png) no-repeat 0 50%; padding-left: 16px;}
-tr.issue.idnt-1 td.subject {padding-left: 0.5em;}
-tr.issue.idnt-2 td.subject {padding-left: 2em;}
-tr.issue.idnt-3 td.subject {padding-left: 3.5em;}
-tr.issue.idnt-4 td.subject {padding-left: 5em;}
-tr.issue.idnt-5 td.subject {padding-left: 6.5em;}
-tr.issue.idnt-6 td.subject {padding-left: 8em;}
-tr.issue.idnt-7 td.subject {padding-left: 9.5em;}
-tr.issue.idnt-8 td.subject {padding-left: 11em;}
-tr.issue.idnt-9 td.subject {padding-left: 12.5em;}
+tr.issue.idnt td.subject {background: url(../images/bullet_arrow_right.png) no-repeat 0 50%;}
+tr.issue.idnt-1 td.subject {padding-left: 24px; background-position: 8px 50%;}
+tr.issue.idnt-2 td.subject {padding-left: 40px; background-position: 24px 50%;}
+tr.issue.idnt-3 td.subject {padding-left: 56px; background-position: 40px 50%;}
+tr.issue.idnt-4 td.subject {padding-left: 72px; background-position: 56px 50%;}
+tr.issue.idnt-5 td.subject {padding-left: 88px; background-position: 72px 50%;}
+tr.issue.idnt-6 td.subject {padding-left: 104px; background-position: 88px 50%;}
+tr.issue.idnt-7 td.subject {padding-left: 120px; background-position: 104px 50%;}
+tr.issue.idnt-8 td.subject {padding-left: 136px; background-position: 120px 50%;}
+tr.issue.idnt-9 td.subject {padding-left: 152px; background-position: 136px 50%;}
 
 table.issue-report {table-layout:fixed;}
 
